[project]
name = "opentimelineio-testing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opentimelineio>=0.17.0",
    "videojungle>=0.1.28",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "ipython>=8.32.0",
]
